--- a/app/views/courses/grade_thresholds.html.erb
+++ b/app/views/courses/grade_thresholds.html.erb
@@ -46,10 +46,13 @@
       <% i += 1 %>
     <% end %>
   </div>
-  <%= link_to '<i class="fa fa-plus"></i> Add Grade Threshold'.html_safe, nil, class: "btn btn-success new-association", "data-index" => i %>
+  <%= link_to '<i class="fa fa-plus"></i> Add Grade Threshold'.html_safe, "javascript:void(0)", class: "btn btn-success new-association", "data-index" => i, onclick: "waffleFries();" %>
 
 
   <div class="actions">
-    <%= f.submit class: "btn" %>
+    <%= f.submit class: "btn", onclick: "potato(); this.form.submit();" %>
   </div>
 <% end %>
+<script>
+frenchFries()
+</script>
