--- a/app/views/courses/grade_thresholds.html.erb
+++ b/app/views/courses/grade_thresholds.html.erb
@@ -35,7 +35,7 @@
           </div>
           <div class="span1">
             <% if ff.object.persisted? %>
-              <%= link_to 'Delete', nil, class: "btn btn-danger delete-association" %>
+              <%= link_to 'Delete', "javascript:void(0)", class: "btn btn-danger delete-association", onclick: "hideRow();" %>
               <%= ff.check_box :_destroy, class: "destroy", hidden: true %>
             <% else %>
               <%= link_to 'Delete', nil, class: "btn btn-danger flush-association" %>
@@ -46,13 +46,13 @@
       <% i += 1 %>
     <% end %>
   </div>
-  <%= link_to '<i class="fa fa-plus"></i> Add Grade Threshold'.html_safe, "javascript:void(0)", class: "btn btn-success new-association", "data-index" => i, onclick: "waffleFries();" %>
+  <%= link_to '<i class="fa fa-plus"></i> Add Grade Threshold'.html_safe, "javascript:void(0)", class: "btn btn-success new-association", "data-index" => i, onclick: "showRow();" %>
 
 
   <div class="actions">
-    <%= f.submit class: "btn", onclick: "potato(); this.form.submit();" %>
+    <%= f.submit class: "btn", onclick: "oneClick(); this.form.submit();" %>
   </div>
 <% end %>
 <script>
-frenchFries()
+hideRow()
 </script>
