--- a/app/views/courses/grade_thresholds.html.erb
+++ b/app/views/courses/grade_thresholds.html.erb
@@ -35,7 +35,7 @@
           </div>
           <div class="span1">
             <% if ff.object.persisted? %>
-              <%= link_to 'Delete', "javascript:void(0)", class: "btn btn-danger delete-association", onclick: "hideRow();" %>
+              <%= link_to 'Delete', "javascript:void(0)", class: "btn btn-danger delete-association", onclick: "hiddenRow();" %>
               <%= ff.check_box :_destroy, class: "destroy", hidden: true %>
             <% else %>
               <%= link_to 'Delete', nil, class: "btn btn-danger flush-association" %>
