--- a/app/views/courses/grade_thresholds.html.erb
+++ b/app/views/courses/grade_thresholds.html.erb
@@ -35,10 +35,10 @@
           </div>
           <div class="span1">
             <% if ff.object.persisted? %>
-              <%= link_to 'Delete', "javascript:void(0)", class: "btn btn-danger delete-association", onclick: "hiddenRow();" %>
-              <%= ff.check_box :_destroy, class: "destroy", hidden: true %>
+              <%= link_to 'Delete', "javascript:void(0)", class: "btn btn-danger delete-association" %>
+              <%= ff.check_box :_destroy, class: "destroy", hidden: false %>
             <% else %>
-              <%= link_to 'Delete', nil, class: "btn btn-danger flush-association" %>
+              <%= link_to 'Delete', "javascript:void(0)", class: "btn btn-danger flush-association" %>
             <% end %>
           </div>
         </div>
@@ -46,13 +46,10 @@
       <% i += 1 %>
     <% end %>
   </div>
-  <%= link_to '<i class="fa fa-plus"></i> Add Grade Threshold'.html_safe, "javascript:void(0)", class: "btn btn-success new-association", "data-index" => i, onclick: "showRow();" %>
+  <%= link_to '<i class="fa fa-plus"></i> Add Grade Threshold'.html_safe, "javascript:void(0)", class: "btn btn-success new-association", "data-index" => i%>
 
 
   <div class="actions">
-    <%= f.submit class: "btn", onclick: "oneClick(); this.form.submit();" %>
+    <%= f.submit class: "btn" %>
   </div>
 <% end %>
-<script>
-hideRow()
-</script>
