--- a/app/views/assignments/_row_buttons.html.erb
+++ b/app/views/assignments/_row_buttons.html.erb
@@ -14,8 +14,24 @@
     <% else %>
       <%= link_to '<i class="fa fa-legal" title="Grade Assignment"></i>'.html_safe, grade_matrix_assignment_path(assignment) %>
     <% end %>
-    <%= link_to '<i class="fa fa-calendar" title="View Grades"></i>'.html_safe, view_grades_assignment_path(assignment) %>
-    <%= link_to '<i class="fa fa-bar-chart-o" title="View Grades"></i>'.html_safe, view_grades_assignment_path(assignment) %>
+    <%= link_to '<i class="fa fa-bar-chart-o" title="Assignment Dates"></i>'.html_safe, view_grades_assignment_path(assignment) %>
+
+
+    <%= link_to '<i class="fa fa-calendar" title="View Grades"></i>'.html_safe, "javascript:void(0)" %>
+    <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h3 id="myModalLabel">Assignment Dates</h3>
+      </div>
+      <div class="modal-body">
+        <%= datetime_select 'assignments', 'active_at', method: :update %>
+        <%= datetime_select 'assignments', 'due_at', method: :update %>
+      </div>
+      <div class="modal-footer">
+        <a href "javascript:void(0)" class="btn">Close</a>
+        <a href "javascript:void(0)" class="btn ">Save changes</a>
+      </div>
+    </div>
   <% end %>
   <%= link_to 'Edit', edit_assignment_path(assignment), class: "btn btn-mini" %>
 <% end %>
